[#665] Fix wrapping of labels for checkboxes/radio buttons

--- a/htdocs/scss/pages/entry/new.scss
+++ b/htdocs/scss/pages/entry/new.scss
@@ -106,6 +106,13 @@
     fieldset fieldset {
         padding: 0;
     }
+
+    // so that when it wraps it still stays beside the radio/checkbox
+    // instead of having the entire label go to the next line
+    input[type="checkbox"] + label,
+    input[type="radio"] + label {
+        display: inline;
+    }
 }
 
 /* Currents */
